fix title alignment and css targeting.

--- a/sites/forconstructionpros.com/server/styles/index.scss
+++ b/sites/forconstructionpros.com/server/styles/index.scss
@@ -108,30 +108,27 @@ $leaders-accent-color: #212121;
   }
 }
 
-.row > .section-title {
-  @each $section, $color in $website-section-colors {
-    &--#{$section} {
-      @media (max-width: 768px) {
-        font-size: 20px;
-      }
-      &::before {
-        font-size: 50px;
-        font-weight: 100;
-        color: $color;
-        content: "|  ";
+.website-section-header {
+  align-items: center;
+  margin-bottom: 10px;
+  margin-left: 0;
+
+  & .page-image--section-logo {
+    width: 135px;
+    padding-right: 10px;
+  }
+
+  & > .section-title {
+    @each $section, $color in $website-section-colors {
+      &--#{$section} {
+        @media (max-width: 768px) {
+          font-size: 20px;
+        }
+        padding-left: 10px;
+        margin-bottom: 0;
+
+        border-left: solid $color 4px;
       }
     }
-  }
-  &--rental {
-    padding-top: 20px;
-  }
-}
-
-.row > .page-image {
-  &--section-logo {
-    padding: 10px;
-  }
-  @media (max-width: 768px) {
-    margin-bottom: 0;
   }
 }
